# ChangeLog for media-libs/libcdr
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libcdr/ChangeLog,v 1.15 2012/09/20 14:34:21 scarabeus Exp $

  20 Sep 2012; Tomáš Chvátal <scarabeus@gentoo.org> libcdr-0.0.8.ebuild:
  Amd64, x86 and ppc stable.

  10 Aug 2012; Tomáš Chvátal <scarabeus@gentoo.org> libcdr-0.0.8.ebuild,
  libcdr-9999.ebuild:
  Fix wrong docdir settings. Fixes bug#430672. Thanks to Chris Mayo for the
  patch.

*libcdr-0.0.8 (11 Jun 2012)

  11 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libcdr-0.0.8.ebuild,
  -files/libcdr-0.0.7-clang.patch, -libcdr-0.0.7.ebuild:
  Version bump to latest.

  08 Jun 2012; Zac Medico <zmedico@gentoo.org> libcdr-0.0.7.ebuild,
  libcdr-9999.ebuild:
  tweak inherits so repoman can parse them

  31 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> libcdr-0.0.7.ebuild,
  libcdr-9999.ebuild:
  Keyword on pcc.

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> libcdr-0.0.7.ebuild,
  libcdr-9999.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  27 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> libcdr-0.0.7.ebuild,
  libcdr-9999.ebuild:
  Update homepage.

  24 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/libcdr-0.0.7-clang.patch, libcdr-0.0.7.ebuild:
  Add clang patch. Thanks to Fridrich for pointing out.

*libcdr-0.0.7 (24 Apr 2012)

  24 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libcdr-0.0.7.ebuild,
  -libcdr-0.0.6.ebuild:
  Version bump to latest.

*libcdr-0.0.6 (07 Apr 2012)

  07 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libcdr-0.0.6.ebuild,
  -libcdr-0.0.5.ebuild:
  Version bump to latest. Drop older.

*libcdr-0.0.5 (21 Mar 2012)

  21 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libcdr-0.0.5.ebuild,
  -libcdr-0.0.4.ebuild:
  Version bump to latest. Drop older.

*libcdr-0.0.4 (09 Mar 2012)

  09 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libcdr-0.0.4.ebuild:
  Add some release as i forgot to do this.
