@@ -1,25 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST libcdr-0.0.8.tar.xz 546772 SHA256 e0736afccf174b583cc19ce82775e60d759ddd583aaa696c9c43f724ee43ea84
+DIST libcdr-0.0.8.tar.xz 546772 SHA256 e0736afccf174b583cc19ce82775e60d759ddd583aaa696c9c43f724ee43ea84 SHA512 a72fded5b5ded788b25940516b7f6f7aa2ae807d5f93baf7e3bbc5e325ff13a5146d2be8e8cdf3dfc1b1d2292ade59034be8895ac0b3d53ee6a4e3509f7caf1c WHIRLPOOL 10306a064a37b4342bdb7d545ef353a97b9b277e458aef29b929555b94e7787409f7460a815083488543315799eb13fa4d87f260ea6fbecc1c3995a952deba2e
+DIST libcdr-0.0.9.tar.xz 576088 SHA256 33a134b6474f5fe2cca797afb50a84f9f2cd247487fa3610a5e0b6530e4e0ded SHA512 055e67bd0d16d9575349b5afe91f8dc78821ca7a27873e699afce96229fdcf8174c21e4df2d16ed6ce558972ab6b60b665004e0e60bb7bbed2c4d2a4e9a54540 WHIRLPOOL 337bbe93999769b1a836c6c05d0f01f4bb29e06b2563959e5ee720fefc7eec4221c7e7f59e7ef10b39130368c904a009e667afa6724672477e175a431c27bf05
 EBUILD libcdr-0.0.8.ebuild 1158 SHA256 0db72b83e71d943f80c40ab06dfbc6f70f3fabd2046a972b26400ba86161a5b0 SHA512 a75f49d72b0e5a78d72686424666f94765c76618889d1b975bffd21d6e962db46389e6d49541bb97f6a27b1431533ed8a9a5453d24388559ef9fc95e709c1f98 WHIRLPOOL dbb0ab9b32bd788f0b9c6196d9a3743189eb37182d3cd914a4dd7e5db38d7947124a6f6fbd7eb3cbf7fc408791dbd1ac845ab777e5f9cf3c44f998a77337d61c
+EBUILD libcdr-0.0.9.ebuild 1161 SHA256 c4451388bb990ada5bfe9a23531328f90af14edbbb82de9014fa41ed842d7b22 SHA512 6ca1b1a945c24646a28cb06d322a35f0ee297bf505f074d172b3f48c0f7c9822245daf551c521410fe4d21c7997ef3f22c0e54beb920aa444d8473d86111d71a WHIRLPOOL 11160479ded2423b5201671f18773ea1c825bbea08d629f9884b16f872ec9b0bf723894593bd1b90fe45d69e2a13cbaf985c8658c363122631389ccfd093d1de
 EBUILD libcdr-9999.ebuild 1160 SHA256 b928d351fb6de996d1fa4b8f57c32851771425243b13fdf06ec08aec930893ce SHA512 32bd9e9f4d8d30fc3f3513fc2cda5d37b65d32b1d231be66db175ea85f2c3fee6e331d7707a0c2f10a5baf5be461446daf51ca822d6d215b2781a44fc1793897 WHIRLPOOL e0388df40ab6d9a55b6271e5dcdc79467839418526e7a501fcb55602a37f57f8938880b687a8466f19200331552a0429ca24d7baf3eb26799c187aab9a9ec9ee
-MISC ChangeLog 2375 SHA256 52b87d788edfc08a98c3f820a3e8c8d521462c596994418114bb84617c803d27 SHA512 1cf88f609aed3311945214e15cbcbce3c0c1fb1a2b0d558fb07e27dfdc4c4b8bb13c3ad5094b767bec01e85ea0499169be05ebdc64185a4b65494e36344319cb WHIRLPOOL 6e72428317db7cef85ee83c05451fcfa3543af43be76382fa83376e93d15f38c86ffb3d6956b5ef2b4ddc8e6e4287bc22eef8f7e61d0ed0bfc994bd259df7c9a
+MISC ChangeLog 2519 SHA256 c4ff10743653350ce9be7fb3f8c99e56c8ed88e47c75111166b7777eb7344834 SHA512 b25c4861806d83ccb325c73fbac069ba34b7c045dc5bf28b0a763ddd630ce4008ce1242944b2514352734a017e54cc19d6097a51a347dc1c90035911c0da627e WHIRLPOOL 480f89a0e048a280bbad9fc3cca89d1adada611afcb39d52f596f11d81028938c703135ef5dc72b4cc3bda8115ee387c7fcb41c7ba2e24845a5dd6ad76b79a4d
 MISC metadata.xml 164 SHA256 6dd077e0a4bddf8cac0a6d7fb01d5f992a81c85d77d55787d19c6d4ae4c5aeeb SHA512 acd8ec5158c34fd738af175dda4c270a884c80e76dd10d9252e2513846ae1cb69ed8b1afe328a69ced10974ca3c60366394990b98a0d9b9815527f262afd9937 WHIRLPOOL 43b43d99d3c96c6da7006df219d57a4ff853353940dbd597bbbd2be00af7b38f0e6c3e33024b1e964ef1fedb12f788ea78693b7e3527011d8bbb9757ec0b88a2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQWylTAAoJEOSiRoyO7jvo7/MP/iSjDBA2dDjyORrvsFrvX2Rh
-3ybAHQtMe04rsZ/oACBRdEX7bYE5o0z+sceGx+hLCKuXOPD4P9x79pD91xNirNx0
-Pg6qilxHJt2zToT40FiZlvrv0Wugn+6PNPHOrnjg3sBG7JrR0susQG0ZxBsfjE6f
-WyjlKa5mJ0oJn390F1skUzjOQ+Z6//0ZpwrVmUfJDBC4mfpu76M1XnnuxpJ+HE4e
-+USOMAT0B9YFhXfoIN+2CaqqKS8mJ8NWczLDpazw29AvYi+HsPqgBIljrUGCi6C+
-uHZxg18zwIipRspzkaEBGwTuDNvgeZQCu7C10hkmVHzpfyPzFeo9aVOBQ9/5VN+8
-3h40WpbOMp1v3FAJo9qr9oZICYsvsNufq4c+eTIp0cE/yzO2CVlru6fxdAXQJNOp
-ILi46+XAjctbXBWUu+qtYq1BKvNnvESIXVTMVHSlQhR3Y4V0+H7Ro0ifgqRshYCS
-IN4JF7cIDN+66nolSkLTYTz9e3nQf2BLgSTnoULQJkotMipqQh27SYElk5Vdr9sB
-/jnAWuNONmHlYE0siXAURtfLaC00sEEqn26i61BeEc74IrCsugCborsXg2pzPPUk
-8wPK5SSB5QbVHQb5s1GMPc0QWAcCtkN4deNIwmcSJh07QBzbOncFGNj+hewyvR8K
-wS21p+gzhaVt/Lcp8oPN
-=aitu
+iQIcBAEBCAAGBQJQbveJAAoJEOSiRoyO7jvoylcP/RFqv3UH8CFlTW2Lw8q5nzw8
+Zj5t1o4r9ZOM7XaOF+lQxRZcaqVc4N9grFcmtCiUZ07pFq7e42FinyCBcQG7ehtJ
+i85cer8iwb8UO1OuPPe4DRfoMJsCAmIulCzSbXVbkEJRrJg9Zhhs5xe8nKwQsYLN
+zY+MLPFkE58nEjxYsw9uTVjB0aOvOdf9w4tTyPCar7+mAD2Go6tGnIobJbeGivdi
+KMGp0Ng1M4jQ88/hUKUoZtmcdb6//dUhIdWYGDgEIc2hMzIHKbs+ohcDClEIA2xm
+8iWnH2hmhn//FVTXAoF4A2BBZoWc6bnwANrDVx5tackN9dQCwbU5sMKiydtxFVpQ
+1Cf1d4JZzf6Y5xdrTQHpqG+moPnEyG6FwUMMT4HVIMtNRRk855gZQvd5yQQZugYz
+iXHw02UQRQa/BChkQhTivesoRJgE2hGMzglJXEP/CtwwlrRFxYrIY71wruj8A6XT
+A9MTR99W3ccEa3hbml8uFiaZTQPKVAKhhQZ2H8UhuJgq27rZD8KMpEaYGfTakBDx
+S+U0GMWmTsZU5XS0e5UWl0cYGf/MJFwtzoSOscGnJ+4fkq4vtr6Th9QNelDBwQq3
+eU5j/lpZZJFTUXRMdihB/cm4bI4QrEVV+ecV77H2L2F/OyTlHP4ifY/aJnQ9ZRpR
+S9n9UlC0CJfGBfBzus0N
+=YF4e
 -----END PGP SIGNATURE-----
