@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libcdr
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcdr/ChangeLog,v 1.15 2012/09/20 14:34:21 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcdr/ChangeLog,v 1.16 2012/10/05 15:06:42 scarabeus Exp $
+
+*libcdr-0.0.9 (05 Oct 2012)
+
+  05 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libcdr-0.0.9.ebuild:
+  Version bump to latest with fixes.
 
   20 Sep 2012; Tomáš Chvátal <scarabeus@gentoo.org> libcdr-0.0.8.ebuild:
   Amd64, x86 and ppc stable.
